Fixed org syntax errors.

--- a/README.org
+++ b/README.org
@@ -1,6 +1,10 @@
+#+Title:        SBT XSLT Plugin README
+#+AUTHOR:       José Miguel Martínez Carrasco
+#+EMAIL:        jm2dev@gmail.com
+
 * SBT XSLT Plugin
 
-[[https://github.com/harrah/xsbt][Simple Build Tool] for trasnforming XML files using Saxon HE XSL Transformer.
+[[https://github.com/harrah/xsbt][Simple Build Tool]] for trasnforming XML files using Saxon HE XSL Transformer.
 
 ** Installation
 
@@ -11,10 +15,8 @@ Clone this repository and run the publish-local goal.
 Insert the following lines in your project/plugins.sbt file
 
 #+BEGIN_SRC scala
-       libraryDependencies ++= Seq(
-                    "net.sf.saxon" % "Saxon-HE" % "9.4"
-                    )
+libraryDependencies ++= Seq( "net.sf.saxon" % "Saxon-HE" % "9.4" )
 
-       addSbtPlugin("com.jm2dev" %% "sbt-xslt-plugin" % "0.1.2")
+addSbtPlugin("com.jm2dev" %% "sbt-xslt-plugin" % "0.1.2")
 #+END_SRC
 
