Resolver is modified.

--- a/README.org
+++ b/README.org
@@ -11,9 +11,7 @@
 Insert the following lines in your *project/plugins.sbt* file
 
 #+BEGIN_SRC scala
-resolvers ++= Seq (
-    "scalasbt" at "http://scalasbt.artifactoryonline.com/scalasbt/sbt-plugin-releases"
-)
+resolvers += Resolver.url("scalasbt", new URL("http://scalasbt.artifactoryonline.com/scalasbt/sbt-plugin-releases"))(Resolver.ivyStylePatterns)
 
 addSbtPlugin("com.jm2dev" %% "sbt-xslt-plugin" % "0.1.6")
 #+END_SRC
